Added simple theme styles

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,3 +3,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  @apply bg-light text-light-text dark:bg-dark dark:text-dark-text;
+}
