--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,6 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
+body {
   @apply font-display bg-light text-light-text dark:bg-dark dark:text-dark-text;
 }
