--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,10 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  @apply ease-in-out duration-300
+}
+
 body {
-  @apply font-display bg-light text-light-text dark:bg-dark dark:text-dark-text;
+  @apply font-display bg-light dark:bg-dark;
 }
