Added basic scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,3 +11,15 @@
 body {
   @apply font-display bg-light dark:bg-dark;
 }
+
+::-webkit-scrollbar {
+  @apply w-2;
+}
+
+::-webkit-scrollbar-track {
+  @apply bg-light dark:bg-dark;
+}
+
+::-webkit-scrollbar-thumb {
+  @apply bg-primary;
+}
